--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div id="roo2">
       <h1>Up Part</h1>
       <div id="root">
-        <h1>Jaypal Sagarsss</h1>
+        <h1>Jaypal Sagar</h1>
       </div>
       <h1>Up Down</h1>
     </div>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="App.js"></script>
   </body>
 </html>
